# ModernC-Design

./: CMakeLists.txt  Catalan-2.0.runtime_environment.sh  RuyLopez.runtime_environment.sh
cmake_macros_and_functions/: moderncppdesign_build_prerequisites.cmake  moderncppdesign_mpl.cmake
configuations/: Catalan-2.0.sh  moderncppdesign_core_configurations.sh
configurations/: Catalan-2.0.sh  RuyLopez.sh  moderncppdesign_core_configurations.sh
mp_fold/: CMakeLists.txt  mp_fold.cpp
mp_fold/cmake_macros_and_functions/: mp_fold_build_prerequisites.cmake  mp_fold_library.cmake
mp_fold/header_files/: AbstractPersonFactory.hpp  DefaultPersonFactory.hpp  GenerateLinearHierarchy.hpp  GenerateScatteredHierarchy.hpp  Jane.hpp  MPLAliases.hpp  MyName.hpp  Name.hpp  Person1.h  Person2.h  Person3.h  mp_fold.hpp
mp_fold/implementation_files/: AbstractPersonFactory.cpp  DefaultPersonFactory.cpp  GenerateLinearHierarchy.cpp  GenerateScatteredHierarchy.cpp  Jane.cpp  MyName.cpp  Name.cpp  Person1.cpp  Person2.cpp  Person3.cpp  mp_fold.cpp
sources/: CMakeLists.txt
sources/abstract_factory_project/: CMakeLists.txt
sources/abstract_factory_project/header_files/: BadMonster.h  BadSoldier.h  BadSuperMonster.h  Monster.h  SillyMonster.h  SillySoldier.h  SillySuperMonster.h  Soldier.h  SuperMonster.h  TestAbstractFactoryUnit.hpp  TestEventHandler.hpp  enemy.h  main.h
sources/abstract_factory_project/implementation_files/: BadMonster.cpp  BadSoldier.cpp  BadSuperMonster.cpp  Monster.cpp  SillyMonster.cpp  SillySoldier.cpp  SillySuperMonster.cpp  Soldier.cpp  SuperMonster.cpp  TestAbstractFactoryUnit.cpp  TestEventHandler.cpp  enemy.cpp  main.cpp
sources/cmake_macros_and_functions/: moderncppdesign_mpl.cmake  mpl_build_prerequisites.cmake
sources/generalized_functors/: CMakeLists.txt
sources/generalized_functors/header_files/: Functor.hpp  FunctorImpl.hpp  main.h
sources/generalized_functors/implementation_files/: Functor.cpp  FunctorHandler.cpp  main.cpp
sources/generic_visitor_project/: CMakeLists.txt
sources/generic_visitor_project/header_files/: BaseVisitable.hpp  BaseVisitor.h  DefaultCatchAll.hpp  DefineVistableMacro.h  FunctorHandler.hpp  Visitor.hpp  main.h
sources/generic_visitor_project/implementation_files/: DefineVisitableMacro.cpp  FunctorImpl.cpp  main.cpp
sources/meta_programming_library/: CMakeLists.txt
sources/meta_programming_library/header_files/: AbstractFactory.hpp  AbstractFactoryUnit.hpp  GenerateScatteredHierarchy.hpp  OpNewFactoryUnit.hpp
